--- a/src/app/basic-layout/nav/nav.component.html
+++ b/src/app/basic-layout/nav/nav.component.html
@@ -23,7 +23,9 @@
       <span>ng-basics</span>
     </mat-toolbar>
 
-    <router-outlet></router-outlet>
+    <main>
+      <router-outlet></router-outlet>
+    </main>
 
   </mat-sidenav-content>
 </mat-sidenav-container>
