--- a/src/app/character/character/character.component.html
+++ b/src/app/character/character/character.component.html
@@ -1,3 +1,27 @@
-<p>
-  character works!
-</p>
+
+<mat-card>
+
+  <mat-card-header>Character bearbeiten</mat-card-header>
+
+  <br>
+
+  <mat-card-content>
+
+    <form>
+      <mat-form-field>
+        <input [(ngModel)]="character.name" placeholder="Name" name="name" matInput>
+      </mat-form-field>
+
+      <mat-form-field>
+        <input [(ngModel)]="character.culture" placeholder="Culture" name="culture" matInput>
+      </mat-form-field>
+
+    </form>
+
+    <p *ngIf="character.name || character.culture">
+      {{ character.name }}, {{ character.culture }}
+    </p>
+
+  </mat-card-content>
+
+</mat-card>
