--- a/src/app/basic-layout/nav/nav.component.html
+++ b/src/app/basic-layout/nav/nav.component.html
@@ -5,7 +5,7 @@
       [opened]="!(isHandset$ | async)">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/characters">Charactere</a>
+      <a mat-list-item routerLink="/character" routerLinkActive="active">Charactere</a>
       <a mat-list-item href="#">Link 2</a>
       <a mat-list-item href="#">Link 3</a>
     </mat-nav-list>
