--- a/src/styles.css
+++ b/src/styles.css
@@ -6,5 +6,5 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mat-form-field {
   width: 100%;
   max-width: 500px;
-  display: block;
+  display: block!important;
 }
