--- a/src/app/character/character-list/character-list.component.html
+++ b/src/app/character/character-list/character-list.component.html
@@ -25,7 +25,7 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="navigate(row)"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="update(row)"></tr>
   </table>
 
   <mat-paginator #paginator
@@ -35,3 +35,11 @@
       [pageSizeOptions]="[25, 50, 100, 250]">
   </mat-paginator>
 </div>
+
+<br>
+
+<button mat-raised-button
+        color="primary"
+        (click)="create()">
+  Hinzufügen
+</button>
